methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:26: error: not found: value forwad
  forward(); forwad();
             ^